Removing skybox, added FPS controls

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,15 @@
 		<title>makerverse</title>
 	</head>
 	<body>
-		<canvas class="webgl-canvas"></canvas>
+		<div id="blocker">
+			<div id="instructions">
+				<p style="font-size: 36px">Click to play</p>
+				<p>
+					Move: WASD<br />
+					Jump: SPACE<br />
+					Look: MOUSE
+				</p>
+			</div>
+		</div>
 	</body>
 </html>
